# minescpp

./: CMakeLists.txt  README.md
src/: Action.cpp  Action.h  Cell.cpp  Cell.h  Coordinate.cpp  Coordinate.h  GameOver.cpp  GameOver.h  Minefield.cpp  Minefield.h  SteppedOnMine.cpp  SteppedOnMine.h  main.cpp
